--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using PROVEEDORES
-@using PROVEEDORES.Models
+﻿@using ECOSApp
+@using ECOSApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
